// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <p
    className="spacer-bottom"
  >
    hotspots.no_associated_lines
  </p>
  <withCurrentUserContext(HotspotSnippetHeader)
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    hotspot={
      {
        "assignee": "assignee",
        "assigneeUser": {
          "active": true,
          "local": true,
          "login": "assignee",
          "name": "John Doe",
        },
        "author": "author",
        "authorUser": {
          "active": true,
          "local": true,
          "login": "author",
          "name": "John Doe",
        },
        "canChangeStatus": true,
        "changelog": [],
        "comment": [],
        "component": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "FIL",
        },
        "creationDate": "2013-05-13T17:55:41+0200",
        "flows": [
          {
            "locations": [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          },
        ],
        "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
        "line": 142,
        "message": "'3' is a magic number.",
        "project": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "TRK",
        },
        "resolution": "FIXED",
        "rule": {
          "key": "squid:S2077",
          "name": "That rule",
          "securityCategory": "sql-injection",
          "vulnerabilityProbability": "HIGH",
        },
        "status": "REVIEWED",
        "textRange": {
          "endLine": 142,
          "endOffset": 83,
          "startLine": 142,
          "startOffset": 26,
        },
        "updateDate": "2013-05-13T17:55:42+0200",
        "users": [
          {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
        ],
      }
    }
  />
  <div
    className="hotspot-snippet-container bordered"
  >
    <DeferredSpinner
      className="big-spacer"
      loading={false}
    />
  </div>
</Fragment>
`;

exports[`should render correctly when secondary location is selected: with selected hotspot location 1`] = `
<Fragment>
  <p
    className="spacer-bottom"
  >
    hotspots.no_associated_lines
  </p>
  <withCurrentUserContext(HotspotSnippetHeader)
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    hotspot={
      {
        "assignee": "assignee",
        "assigneeUser": {
          "active": true,
          "local": true,
          "login": "assignee",
          "name": "John Doe",
        },
        "author": "author",
        "authorUser": {
          "active": true,
          "local": true,
          "login": "author",
          "name": "John Doe",
        },
        "canChangeStatus": true,
        "changelog": [],
        "comment": [],
        "component": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "FIL",
        },
        "creationDate": "2013-05-13T17:55:41+0200",
        "flows": [
          {
            "locations": [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          },
        ],
        "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
        "line": 142,
        "message": "'3' is a magic number.",
        "project": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "TRK",
        },
        "resolution": "FIXED",
        "rule": {
          "key": "squid:S2077",
          "name": "That rule",
          "securityCategory": "sql-injection",
          "vulnerabilityProbability": "HIGH",
        },
        "status": "REVIEWED",
        "textRange": {
          "endLine": 142,
          "endOffset": 83,
          "startLine": 142,
          "startOffset": 26,
        },
        "updateDate": "2013-05-13T17:55:42+0200",
        "users": [
          {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
        ],
      }
    }
  />
  <div
    className="hotspot-snippet-container bordered"
  >
    <DeferredSpinner
      className="big-spacer"
      loading={false}
    />
  </div>
</Fragment>
`;

exports[`should render correctly: with sourcelines 1`] = `
<Fragment>
  <withCurrentUserContext(HotspotSnippetHeader)
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    hotspot={
      {
        "assignee": "assignee",
        "assigneeUser": {
          "active": true,
          "local": true,
          "login": "assignee",
          "name": "John Doe",
        },
        "author": "author",
        "authorUser": {
          "active": true,
          "local": true,
          "login": "author",
          "name": "John Doe",
        },
        "canChangeStatus": true,
        "changelog": [],
        "comment": [],
        "component": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "FIL",
        },
        "creationDate": "2013-05-13T17:55:41+0200",
        "flows": [
          {
            "locations": [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          },
        ],
        "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
        "line": 142,
        "message": "'3' is a magic number.",
        "project": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "TRK",
        },
        "resolution": "FIXED",
        "rule": {
          "key": "squid:S2077",
          "name": "That rule",
          "securityCategory": "sql-injection",
          "vulnerabilityProbability": "HIGH",
        },
        "status": "REVIEWED",
        "textRange": {
          "endLine": 142,
          "endOffset": 83,
          "startLine": 142,
          "startOffset": 26,
        },
        "updateDate": "2013-05-13T17:55:42+0200",
        "users": [
          {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
        ],
      }
    }
  />
  <div
    className="hotspot-snippet-container bordered"
  >
    <DeferredSpinner
      className="big-spacer"
      loading={false}
    >
      <SnippetViewer
        component={
          {
            "canMarkAsFavorite": true,
            "fav": false,
            "key": "project:foo/bar.ts",
            "longName": "foo/bar.ts",
            "measures": {
              "coverage": "85.2",
              "duplicationDensity": "1.0",
              "issues": "12",
              "lines": "56",
            },
            "name": "foo/bar.ts",
            "path": "foo/bar.ts",
            "project": "project",
            "projectName": "MyProject",
            "q": "FIL",
            "uuid": "foo-bar",
          }
        }
        displayLineNumberOptions={false}
        displaySCM={false}
        expandBlock={[Function]}
        handleSymbolClick={[MockFunction]}
        highlightedSymbols={[]}
        index={0}
        issue={
          {
            "assignee": "assignee",
            "assigneeUser": {
              "active": true,
              "local": true,
              "login": "assignee",
              "name": "John Doe",
            },
            "author": "author",
            "authorUser": {
              "active": true,
              "local": true,
              "login": "author",
              "name": "John Doe",
            },
            "canChangeStatus": true,
            "changelog": [],
            "comment": [],
            "component": {
              "key": "hotspot-component",
              "longName": "Hotspot component long name",
              "name": "Hotspot Component",
              "path": "path/to/component",
              "qualifier": "FIL",
            },
            "creationDate": "2013-05-13T17:55:41+0200",
            "flows": [
              {
                "locations": [
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                ],
              },
            ],
            "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
            "line": 142,
            "message": "'3' is a magic number.",
            "project": {
              "key": "hotspot-component",
              "longName": "Hotspot component long name",
              "name": "Hotspot Component",
              "path": "path/to/component",
              "qualifier": "TRK",
            },
            "resolution": "FIXED",
            "rule": {
              "key": "squid:S2077",
              "name": "That rule",
              "securityCategory": "sql-injection",
              "vulnerabilityProbability": "HIGH",
            },
            "status": "REVIEWED",
            "textRange": {
              "endLine": 142,
              "endOffset": 83,
              "startLine": 142,
              "startOffset": 26,
            },
            "updateDate": "2013-05-13T17:55:42+0200",
            "users": [
              {
                "active": true,
                "local": true,
                "login": "assignee",
                "name": "John Doe",
              },
              {
                "active": true,
                "local": true,
                "login": "author",
                "name": "John Doe",
              },
            ],
          }
        }
        lastSnippetOfLastGroup={false}
        locations={[]}
        locationsByLine={{}}
        onLocationSelect={[MockFunction]}
        renderAdditionalChildInLine={[Function]}
        renderDuplicationPopup={[Function]}
        snippet={
          [
            {
              "code": "<span class="k">import</span> java.util.<span class="sym-9 sym">ArrayList</span>;",
              "coverageStatus": "covered",
              "coveredConditions": 2,
              "duplicated": false,
              "isNew": true,
              "line": 16,
              "scmAuthor": "simon.brandhof@sonarsource.com",
              "scmDate": "2018-12-11T10:48:39+0100",
              "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
            },
          ]
        }
      />
    </DeferredSpinner>
  </div>
</Fragment>
`;
